# studyArena

./: .gitignore  CMakeLists.txt  CmakeConfig.h.in  LICENSE  Makefile  Notes.txt  README.md  studyArena.sublime-project
cmake/: add_library.cmake  add_project.cmake  base.cmake  git_info.cmake  my_add_library.cmake  my_add_project.cmake  my_git.cmake  my_utility.cmake  sanitizers.cmake  utility.cmake
src/: main.cpp
tools/astyle/: afmt  astylerc
